--- a/.github/workflows/snk-car.yml
+++ b/.github/workflows/snk-car.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Generate snake car animation
-        uses: CedricGayraud/snake-car@main   # 👈 ton dépôt forké
+        uses: CedricGayraud/snk-car@main 
         with:
           github_user_name: CedricGayraud
           outputs: dist/github-contribution-grid-snake.svg
