--- a/.github/workflows/snk-car.yml
+++ b/.github/workflows/snk-car.yml
@@ -8,7 +8,10 @@ on:
   push:
     branches:
       - main
-
+      
+permissions:
+  contents: write
+  
 jobs:
   build:
     runs-on: ubuntu-latest
