--- a/.github/workflows/snk-car.yml
+++ b/.github/workflows/snk-car.yml
@@ -14,6 +14,9 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      GH_TOKEN: ${{ secrets.GH_TOKEN }}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
       - name: Checkout repository
@@ -35,7 +38,6 @@ jobs:
 
           echo "🏎️ Génération du Snake Car SVG..."
           npx ts-node packages/action/index.ts \
-
             --user CedricGayraud \
             --output ../dist/github-contribution-grid-snake.svg
 
@@ -47,5 +49,3 @@ jobs:
         with:
           target_branch: output
           build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
