--- a/.github/workflows/snk-car.yml
+++ b/.github/workflows/snk-car.yml
@@ -17,7 +17,7 @@ jobs:
     env:
       GH_TOKEN: ${{ secrets.GH_TOKEN }}
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+      GITHUB_USER_NAME: CedricGayraud
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
