--- a/.github/workflows/snk-car.yml
+++ b/.github/workflows/snk-car.yml
@@ -2,8 +2,8 @@ name: Generate Snake Car
 
 on:
   schedule:
-    - cron: "0 0 * * *"
-  workflow_dispatch:
+    - cron: "0 0 * * *" # chaque jour à minuit
+  workflow_dispatch: # exécution manuelle
   push:
     branches:
       - main
@@ -18,6 +18,7 @@ jobs:
       GH_TOKEN: ${{ secrets.GH_TOKEN }}
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       GITHUB_USER_NAME: CedricGayraud
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -42,7 +43,15 @@ jobs:
           export GH_TOKEN=${{ secrets.GH_TOKEN }}
 
           npx ts-node packages/action/index.ts \
+            --user CedricGayraud \
             --output ../dist/github-contribution-grid-snake.svg
 
           echo "✅ Génération terminée"
-        shell: bash
+
+      - name: Push snake car animation to the output branch
+        uses: crazy-max/ghaction-github-pages@v3
+        with:
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
